# PerturbFM

./: .gitignore  README.md  project_overview.md  prompts.md  pyproject.toml
checkpoints/: norman19_encoder.pt
configs/: external_predictions_manifest.example.json
docs/: CONTEXT.md  dev_todo.md  perturbench_contract.md  perturbench_splits.md  prompt31_bundle.md  slurm.md  third_party_compat.md  v3a_report_template.md
graphs/: norman19_coexpr_train_top20.notes.txt  norman19_coexpr_train_top20.npz  norman19_identity.npz  xiehon2017_identity.npz  xiehon2017_identity_dense.npz
logs/: pfm-dl-all-12821677.err  pfm-dl-all-12822006.out
scripts/: aggregate_leaderboard.py  aggregate_sweep_results.py  build_coexpr_graph.py  check.sh  convert_to_memmap.py  create_norman19_double_splits.py  download_perturbench.py  download_perturbench_splits.py  download_scperturb.py  download_utils.py  eval_external_predictions.py  export_predictions.py  generate_diagrams.py  generate_norman19_combo_weight_sweep.py  generate_norman19_doubles_sweep.py  generate_norman19_graph_sweep.py  generate_norman19_split_sweep.py  generate_pub_diagrams.py  import_scperturbench.py  launch_sweep.py  pretrain_cell_encoder.py  pull_perturbench.sh  pull_scperturbench.sh  run_ablations.py  run_context_ood_ablations.py  run_finalists_test.py  run_perturbench.sh  run_perturbench_suite.py  run_scperturbench.sh  run_scperturbench_suite.py  select_finalists.py  smoke_prompt35.py  tahoe_manifest.py  tahoe_materialize_subset.py  validate_metrics.py
tests/: test_additive_baseline.py  test_baseline_pipeline.py  (+26 more)
(+126 files in other folders)
