[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perturbfm"
version = "0.0.0"
description = "PerturbFM: universal perturbation foundation model with graph priors and calibrated uncertainty."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "torch>=2.0",
  "pyyaml>=6.0",
]

[project.scripts]
perturbfm = "perturbfm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
bench = [
  "anndata>=0.10",
  "h5py>=3.8",
]
tahoe = [
  "pyarrow>=12.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
